; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_os_mswin.c_mch_FullName.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_os_mswin.c_mch_FullName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAIL = common dso_local global i32 0, align 4
@OK = common dso_local global i32 0, align 4
@MAX_PATH = common dso_local global i32 0, align 4
@NUL = common dso_local global i64 0, align 8
@VER_PLATFORM_WIN32_NT = common dso_local global i64 0, align 8
@enc_codepage = common dso_local global i32 0, align 4
@g_PlatformId = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mch_FullName(i64* %0, i64* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i64* %0, i64** %5, align 8
  store i64* %1, i64** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* @FAIL, align 4
  store i32 %10, i32* %9, align 4
  %11 = load i64*, i64** %6, align 8
  %12 = load i64*, i64** %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = sub nsw i32 %13, 1
  %15 = call i32* @_fullpath(i64* %11, i64* %12, i32 %14)
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %4
  %18 = load i64*, i64** %6, align 8
  %19 = load i64*, i64** %5, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sub nsw i32 %20, 1
  %22 = call i32 @vim_strncpy(i64* %18, i64* %19, i32 %21)
  br label %25

23:                                               ; preds = %4
  %24 = load i32, i32* @OK, align 4
  store i32 %24, i32* %9, align 4
  br label %25

25:                                               ; preds = %23, %17
  %26 = load i64*, i64** %6, align 8
  %27 = call i32 @slash_adjust(i64* %26)
  %28 = load i32, i32* %9, align 4
  ret i32 %28
}

declare dso_local i32* @_fullpath(i64*, i64*, i32) #1

declare dso_local i32 @vim_strncpy(i64*, i64*, i32) #1

declare dso_local i32 @slash_adjust(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
